--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     </div>
                     <p id="thanks">Thanks for using my Vending Machine. </p>
                         <p id="thanks"> Please collect your items from below PUSH area</p>
-                    <button class="main-menu">Main menu</button>
+                    <!-- <button class="main-menu">Main menu</button> -->
                 </div>
                 <!-- If payemtn failed -->
                 <div class="payment-failed">
@@ -96,6 +96,14 @@
 
             <div class="push">
                 <p>PUSH</p>
+                <div class="collect">
+                    <div class="first col">
+                        <img src="" alt="">
+                    </div>
+                    <div class="second col">
+                        <img src="" alt="">
+                    </div>
+                </div>
             </div>
         </div>
     </div>
