--- a/index.html
+++ b/index.html
@@ -110,5 +110,7 @@
 
     <script src="script.js"></script>
     <script src="payment.js"></script>
+    <script src="pushArea.js"></script>
+    <script src="regret.js"></script>
 </body>
 </html>
