DID some changes

--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
 
                 <div class="admin">
                     <p>ADMIN CONTROLS</p>
+                    <div class="logOut">
+                        <i class="fa fa-sign-out" aria-hidden="true"></i>
+                    </div>
                     <hr>
                     <!-- <div class="product-cont">
                         <div class="visual">
@@ -143,7 +146,6 @@
     <script src="script.js"></script>
     <script src="payment.js"></script>
     <script src="pushArea.js"></script>
-    <script src="regret.js"></script>
     <script src="admin.js"></script>
 </body>
 </html>
@@ -160,8 +162,9 @@ Whats next
 ✔ Deduct the quantity of the item when the purchase is successful
 ✔ Disable the eventListeners of the items when in payment mode
 ✔ Add a button which with password, fills the quantity of items in vending machine
-Add Logout button on Admin Panel
-When changed from admin contol and saved changed should reflect immediately     
+✔ Add Logout button on Admin Panel
+✔ Bug : In admin controls the things appear as many time as you login so make it load only one time
+✔ When changed from admin contol and saved changed should reflect immediately     
 Work on good UI
 Add some animations
 Add a screensaver on the screen and when clicked everything turns on, when inactivity the screensaver turns on 
