--- a/helper.html
+++ b/helper.html
@@ -14,6 +14,6 @@
         <button onclick="sendData()">Complete Payment</button>
     </div>
 
-    <script src="helper.js"></script>
+    <script src="./JS_Files/helper.js"></script>
 </body>
 </html>
