--- a/index.html
+++ b/index.html
@@ -143,10 +143,10 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
-    <script src="payment.js"></script>
-    <script src="pushArea.js"></script>
-    <script src="admin.js"></script>
+    <script src="./JS_Files/script.js"></script>
+    <script src="./JS_Files/payment.js"></script>
+    <script src="./JS_Files/pushArea.js"></script>
+    <script src="./JS_Files/admin.js"></script>
 </body>
 </html>
 
