--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/589957875e.js" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
     <title>Vending Machine</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -70,9 +71,7 @@
                 <!-- Changes the whole screen and give a QR code to complete payemnt -->
                 <div class="payment">
                     <p id="title">SCAN TO PAY</p>
-                    <div class="QR">
-                        <img src="" alt="QR">
-                    </div>
+                    <div class="QR"></div>
                     <p id="money">₹ 0.00</p>
                     <p id="warning">Please complete the payment before <p id="timer">2:00</p></p>
                     <button id="cancel">Cancel</button>
@@ -147,6 +146,7 @@
     <script src="./JS_Files/payment.js"></script>
     <script src="./JS_Files/pushArea.js"></script>
     <script src="./JS_Files/admin.js"></script>
+    <script src="./JS_Files/processingRequests.js"></script>
 </body>
 </html>
 
@@ -165,14 +165,20 @@ Whats next
 ✔ Add Logout button on Admin Panel
 ✔ Bug : In admin controls the things appear as many time as you login so make it load only one time
 ✔ When changed from admin contol and saved changed should reflect immediately     
+Add close button to admin login
 Work on good UI
 Add some animations
 Add a screensaver on the screen and when clicked everything turns on, when inactivity the screensaver turns on 
 Add the QR code and try the backend thing
 If loaded into a new browsre the items don't load at the first time. Have to reload to load items
 
+Add media queries for responsiveness of the website
+    the green part expands to down and and the products gird becomes 4x6
+    if the screen is too small the scren and push comes below the main window
+    shrink the size of the products in the main window
 
 
+Body background color to something cool.
 
 
 
