--- a/helper.html
+++ b/helper.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Helper Website</title>
-    <link rel="stylesheet" href="helper.css">
+    <link rel="stylesheet" href="./css/helper.css">
 </head>
 <body>
     <h1>Vending Machine Payment</h1>
     <div class="container">    
-        <p><strong>Total Amount:</strong> <span id="number">199</span></p>
+        <p id="total"><strong>Total Amount: ₹</strong> <span id="number">199</span>.00</p>
         <button id="pay">Complete Payment</button>
     </div>
     <div class="completed">
         <p><strong>Thanks for your purchase!</strong></p>
-        <p><strong>Don't have a good day. Have a great one!</strong></p>
-        <hr>
-        <p><strong>We value your feedback to improve our services.</strong></p>
+        <p><strong>Don't have a good day. Have a great day!</strong></p>
+        
         <div class="feedback">
+            <h3>We value your feedback to improve our services.</h3>
             <form action="/submit-feedback" method="POST">
                 <label for="rating">How satisfied were you with your purchase?</label><br>
                 <input type="radio" id="very_satisfied" name="rating" value="Very Satisfied" required>
