--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="https://kit.fontawesome.com/589957875e.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
     <title>Vending Machine</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <div class="vending-machine">
