--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
                     <input type="password" name="password" id="password" placeholder="password">
                     <p id="login-feedback"></p>
                     <button id="login-button">Login <i class="fa-solid fa-right-to-bracket"></i></button>
+                    <button id="login-cancel">Cancel</button>
                 </div>
 
                 <div class="admin">
