updated payment system

--- a/payment.html
+++ b/payment.html
@@ -14,8 +14,8 @@
     </div>
     <div class="completed">
         <p><strong>Thanks for your purchase!</strong></p>
-        <p><strong>Don't have a good day. Have a great day!</strong></p>
-        
+        <p><strong>Don't have a good day, Have a great day!</strong></p>
+        <p>Due to some technical issues the payment system is not working correctly.Click on the QR code to proceed and collect your items</p>
         <div class="feedback">
             <h3>We value your feedback to improve our services.</h3>
             <form action="/submit-feedback" method="POST">
