Added names of the products

--- a/payment.html
+++ b/payment.html
@@ -9,9 +9,26 @@
 <body>
     <h1>Vending Machine Payment</h1>
     <div class="container">    
+        <div class="cart">
+            
+        </div>
+
         <p id="total"><strong>Total Amount: ₹</strong> <span id="number">199</span>.00</p>
-        <button id="pay">Complete Payment</button>
+        <button id="pay">Complete Payment 😊</button>
+        <button id="cancel">Cancel Payment 🥺</button>
     </div>
+
+
+
+
+
+
+
+
+
+
+
+
     <div class="completed">
         <p><strong>Thanks for your purchase!</strong></p>
         <p><strong>Don't have a good day, Have a great day!</strong></p>
