Added database functianality to main website

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/589957875e.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
     <title>Vending Machine</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -177,12 +178,11 @@ Whats next
 ✔ Add Logout button on Admin Panel
 ✔ Bug : In admin controls the things appear as many time as you login so make it load only one time
 ✔ When changed from admin contol and saved changed should reflect immediately     
-Add close button to admin login
-Work on good UI
+✔ Add the QR code
+✔ If loaded into a new browsre the items don't load at the first time. Have to reload to load items
+Add max button next to managing quantity of products in admin controls.
+Work on good UI (colors)
 Add some animations
-Add a screensaver on the screen and when clicked everything turns on, when inactivity the screensaver turns on 
-Add the QR code and try the backend thing
-If loaded into a new browsre the items don't load at the first time. Have to reload to load items
 
 Add media queries for responsiveness of the website
     the green part expands to down and and the products gird becomes 4x6
