--- a/payment.html
+++ b/payment.html
@@ -27,7 +27,7 @@
                 </div>
             </div> -->
         </div>  
-        <p id="total"><strong>Total Amount: ₹</strong> <span id="number">199</span>.00</p>
+        <p id="total"><strong>Total Amount: ₹</strong> <span id="number"></span>.00</p>
         <button id="pay">Complete Payment 😊</button>
         <button id="cancel">Cancel Payment 🥺</button>
     </div>
