--- a/payment.html
+++ b/payment.html
@@ -57,7 +57,7 @@
                 </select><br><br>
         
                 <label for="comments">Any additional comments or suggestions?</label><br>
-                <textarea id="comments" name="comments" rows="4" cols="50" placeholder="Your feedback..."></textarea><br><br>
+                <textarea id="comments" name="comments" placeholder="Your feedback..."></textarea><br><br>
         
                 <button type="submit" id="submit">Submit Feedback</button>
             </form>
