Added many thing

--- a/payment.html
+++ b/payment.html
@@ -71,6 +71,21 @@
         </form>
     </div>
 
+    <div class="feedbackSubmitted">
+        <p>Thanks for submitting your feedback its valuable to us</p>
+        <p>You can show some support to me</p>
+        <div class="upi">
+            <p>prajapatiritesh381@okicici</p>
+            <img src="./images/upi.jpeg" alt="">
+        </div>
+    </div>
+
+    <footer>
+        <div class="contact">
+            <p>Contact : prajapatiritesh381@gmail.com</p>
+            <p>Working on it more things will be added</p>
+        </div>
+    </footer>
 
     <script src="./JS_Files/helper.js"></script>
     <script src="./JS_Files/feedback.js"></script>
