Added many thing

--- a/payment.html
+++ b/payment.html
@@ -80,12 +80,12 @@
         </div>
     </div>
 
-    <footer>
+    <!-- <footer>
         <div class="contact">
             <p>Contact : prajapatiritesh381@gmail.com</p>
             <p>Working on it more things will be added</p>
         </div>
-    </footer>
+    </footer> -->
 
     <script src="./JS_Files/helper.js"></script>
     <script src="./JS_Files/feedback.js"></script>
