--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
     <title>Vending Machine</title>
     <link rel="stylesheet" href="./css/style.css">
+    <!-- <link rel="stylesheet" href="./css/chatgpt.css"> -->
 </head>
 <body>
     <div class="vending-machine">
@@ -72,6 +73,7 @@
                 <!-- Changes the whole screen and give a QR code to complete payemnt -->
                 <div class="payment">
                     <p id="title">SCAN TO PAY</p>
+                    <p>Scan this QR code to simulate a fake payment process involving no real money.</p>
                     <div class="QR"></div>
                     <p id="money">₹ 0.00</p>
                     <p id="warning">Please complete the payment before <p id="timer">2:00</p></p>
