--- a/payment.html
+++ b/payment.html
@@ -37,7 +37,7 @@
 
     <div class="failed">
         <h2 style="color: red;">PAYMENT FAILED</h2>
-        <p>Looks like the payment failed.</p>
+        <p id="reason">Looks like the payment failed 🫤</p>
         <p>Please try again</p>
     </div>
 
@@ -84,9 +84,15 @@
     </div>
 
     <!-- <footer>
-        <div class="contact">
-            <p>Contact : prajapatiritesh381@gmail.com</p>
-            <p>Working on it more things will be added</p>
+        <div class="footer-content">
+            <div class="footer-section about">
+                <h3>About Us</h3>
+                <p>We are dedicated to providing you with the best vending machine experience. Our goal is to make your transactions seamless and enjoyable.</p>
+            </div>
+            <div class="footer-section contact">
+                <h3>Contact Us</h3>
+                <p>Email: prajapatiritesh381@gmail.com</p>
+            </div>
         </div>
     </footer> -->
 
