Upon hovering the name is shown

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <!-- Here create a grid of products where they will be stored -->
         <div class="product-container">
             <!-- <div class="product">
+                <div class="product-name">Product Name</div>
                 <img src="" alt="product-image">
                 <hr>
                 <p id="price">₹ 0.00</p>
